@@ -2220,19 +2220,20 @@ default to 'M-i'."
   (let ((start-buf (current-buffer))
         (wins (window-list))
         (this-dir dired-directory)
-        that-dir old-point win new-buf new-data hist pos)
+        that-dir old-point win target-win new-buf new-data hist pos dup-found)
     (cond
      ((or arg current-prefix-arg) ; Change this window/buffer
        (diredc--ask-on-directory-deleted dired-directory)
        (while (setq win (pop wins))
          (with-current-buffer (setq new-buf (window-buffer win))
-           (when (and (eq major-mode 'dired-mode)
-                      (not (equal this-dir dired-directory)))
-             (set-buffer new-buf)
-             (setq that-dir dired-directory)
-             (setq old-point (point))
-             (setq wins '(nil)))))
-       (set-buffer start-buf)
+           (when (eq major-mode 'dired-mode)
+             (if (equal this-dir dired-directory)
+               (setq dup-found t)
+              (setq that-dir dired-directory)
+              (setq old-point (point))
+              (setq wins '(nil))))))
+       (when (and (not that-dir) dup-found)
+         (user-error "Nothing to do!"))
        (diredc--abort-on-directory-deleted that-dir)
        (when diredc-history-mode
          (diredc-hist--prune-deleted-directories)
@@ -2252,24 +2253,30 @@ default to 'M-i'."
        (while (setq win (pop wins))
          (setq new-buf (window-buffer win))
          (with-current-buffer new-buf
-           (when (and (eq major-mode 'dired-mode)
-                      (not (equal this-dir dired-directory)))
-             (select-window win 'norecord)
-             (diredc--ask-on-directory-deleted dired-directory)
-             (when diredc-history-mode
-               (diredc-hist--prune-deleted-directories)
-               (setq hist diredc-hist--history-list)
-               (setq pos  diredc-hist--history-position)
-               (setf (cdr (nth pos hist)) (point)))
-             (find-alternate-file this-dir)
-             (set-window-dedicated-p nil t)
-             (goto-char old-point)
-             (when diredc-history-mode
-               (setq new-data (diredc-hist--update-directory-history hist pos))
-               (setq diredc-hist--history-list (car new-data))
-               (setq diredc-hist--history-position (cdr new-data)))
-             (pop-to-buffer start-buf)
-             (setq wins '(nil)))))))))
+           (when (eq major-mode 'dired-mode)
+             (if (equal this-dir dired-directory)
+               (setq dup-found t)
+              (setq that-dir dired-directory)
+              (setq target-win win)
+              (setq wins '(nil))))))
+       (when (and (not that-dir) dup-found)
+         (user-error "Nothing to do!"))
+       (select-window target-win 'norecord)
+       (diredc--ask-on-directory-deleted dired-directory)
+       (when diredc-history-mode
+         (diredc-hist--prune-deleted-directories)
+         (setq hist diredc-hist--history-list)
+         (setq pos  diredc-hist--history-position)
+         (setf (cdr (nth pos hist)) (point)))
+       (find-alternate-file this-dir)
+       (set-window-dedicated-p nil t)
+       (goto-char old-point)
+       (when diredc-history-mode
+         (setq new-data (diredc-hist--update-directory-history hist pos))
+         (setq diredc-hist--history-list (car new-data))
+         (setq diredc-hist--history-position (cdr new-data)))
+       (pop-to-buffer start-buf)))))
+
 
 (defun diredc-hist-find-file ()
   "In Dired, visit this file."
